# openapi.yaml
@@ -6,10 +6,82 @@ info:
 servers:
   - url: http://localhost:5003
 paths:
-  /todos/{username}:
+  /chess/analysis:
+    post:
+      operationId: getPosition
+      summary: Analyze a board with the board in FEN
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/fenBoard'
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/cloud-eval'
+  /chess/display:
+    post:
+      operationId: renderBoard
+      summary: Renders the board using ASCII art with the board in FEN
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/fenBoard'
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ASCIIboard'
+  /chess/board/{username}:
+    post:
+      operationId: load_board
+      summary: Load board into user to play chess
+      parameters:
+      - in: path
+        name: username
+        schema:
+            type: string
+        required: true
+        description: The name of the user.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/fenBoard'
+      responses:
+        "200":
+          description: OK
     get:
-      operationId: getTodos
-      summary: Get the list of todos
+      operationId: get_board
+      summary: Get the current chess board
+      parameters:
+      - in: path
+        name: username
+        schema:
+            type: string
+        required: true
+        description: The name of the user.
+
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/fenBoard'
+  /chess/display/{username}:
+    get:
+      operationId: renderBoardUser
+      summary: Renders the board using ASCII art with the board in FEN of the current user
       parameters:
       - in: path
         name: username
@@ -23,10 +95,11 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/getTodosResponse'
+                $ref: '#/components/schemas/ASCIIboard'                
+  /chess/make_move/{username}:
     post:
-      operationId: addTodo
-      summary: Add a todo to the list
+      operationId: make_move
+      summary: Make a move in the current user's chessboard
       parameters:
       - in: path
         name: username
@@ -39,13 +112,20 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/addTodoRequest'
+              $ref: '#/components/schemas/moveRequest'
       responses:
         "200":
           description: OK
-    delete:
-      operationId: deleteTodo
-      summary: Delete a todo from the list
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/fenBoard'
+        "400":
+          description: Invalid move
+  /chess/valid_moves/{username}:
+    get:
+      operationId: get_valid_moves
+      summary: Get valid moves for current user's board
       parameters:
       - in: path
         name: username
@@ -53,41 +133,60 @@ paths:
             type: string
         required: true
         description: The name of the user.
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/deleteTodoRequest'
       responses:
         "200":
           description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/valid_moveResponse'      
 
 components:
   schemas:
-    getTodosResponse:
+    cloud-eval:
       type: object
       properties:
-        todos:
+        pvs:
           type: array
           items:
-            type: string
-          description: The list of todos.
-    addTodoRequest:
+            type: object
+            properties:
+              moves:
+                type: string
+                description: Move in FEN format
+              cp: 
+                type: number
+                description: Evaluation score
+          description: List of positions for chess move
+    fenBoard:
       type: object
       required:
-      - todo
+      - fen
       properties:
-        todo:
+        fen:
           type: string
-          description: The todo to add to the list.
+          description: The board in FEN  
           required: true
-    deleteTodoRequest:
+    ASCIIboard:
       type: object
-      required:
-      - todo_idx
       properties:
-        todo_idx:
-          type: integer
-          description: The index of the todo to delete.
-          required: true
+        display:
+          type: string
+          description: The board displayed in ASCII
+    moveRequest:
+      type: object
+      properties:
+        move:
+          type: string
+          description: A chess move
+    valid_movesResponse:
+      type: object
+      properties:
+        moves:
+          type: array
+          items:
+            type: object
+            properties:
+              moves:
+                type: string
+                description: Chess move
